--- a/src/renderer/PhysicialDeviceSettingsWindow.mxml
+++ b/src/renderer/PhysicialDeviceSettingsWindow.mxml
@@ -2,35 +2,39 @@
 <s:TitleWindow xmlns:fx="http://ns.adobe.com/mxml/2009"
 			   xmlns:s="library://ns.adobe.com/flex/spark"
 			   xmlns:mx="library://ns.adobe.com/flex/mx"
-			   width="300" title="Apple Developer settings"
+			   width="300" title="Settings"
 			   skinClass="skins.AppleDevWindowSkin"
 			   close="closeHandler(event)"
 			   initialize="settings_initializeHandler(event)">
 	<fx:Script>
 		<![CDATA[
-        import flash.net.navigateToURL;
+		import flash.net.navigateToURL;
 
-        import mx.core.FlexGlobals;
-        import mx.events.CloseEvent;
-        import mx.events.FlexEvent;
-        import mx.managers.PopUpManager;
+		import helpers.PortSwitcher;
 
-        import device.RunningDevice;
+		import mx.core.FlexGlobals;
+		import mx.events.CloseEvent;
+		import mx.events.FlexEvent;
+		import mx.managers.PopUpManager;
 
-        [Embed(source="/assets/icons/16/apple_site.png")]
-        private const AppleIcon:Class;
+		import device.RunningDevice;
 
-        [Embed(source="/assets/icons/16/info.png")]
-        private const InfoIcon:Class;
+		import servers.http.HttpServer;
 
-        public var dev:RunningDevice;
-        public var arrayString:Array;
-        public var arrayStringDevTeam:Array;
+		[Embed(source="/assets/icons/16/apple_site.png")]
+		private const AppleIcon:Class;
 
-        public var devices:Array = [];
+		[Embed(source="/assets/icons/16/info.png")]
+		private const InfoIcon:Class;
 
-        protected function settings_initializeHandler(event:FlexEvent):void {
-            /*var fileDevTeam:File = FlexGlobals.topLevelApplication.settingsFile;
+		public var dev:RunningDevice;
+		public var arrayString:Array;
+		public var arrayStringDevTeam:Array;
+
+		public var devices:Array = [];
+
+		protected function settings_initializeHandler(event:FlexEvent):void {
+			/*var fileDevTeam:File = FlexGlobals.topLevelApplication.settingsFile;
             if(fileDevTeam.exists) {
                 var fileStreamSettings:FileStream = new FileStream();
                 fileStreamSettings.open(fileDevTeam, FileMode.READ);
@@ -47,97 +51,121 @@
                 }
                 fileStreamSettings.close();
             }*/
-            devTeamId.text = FlexGlobals.topLevelApplication.getTeamId();
-        }
+			devTeamId.text = FlexGlobals.topLevelApplication.getTeamId();
+		}
 
-        private function closeHandler(event:CloseEvent):void {
-            PopUpManager.removePopUp(this);
-        }
+		private function closeHandler(event:CloseEvent):void {
+			PopUpManager.removePopUp(this);
+		}
 
-        protected function save_clickHandler(event:MouseEvent):void {
-            var file:File = FlexGlobals.topLevelApplication.settingsFile;
-            var fileStream:FileStream = new FileStream();
-            fileStream.open(file, FileMode.WRITE);
-            fileStream.writeUTFBytes("development_team==" + devTeamId.text + "\n");
-            fileStream.close();
-            FlexGlobals.topLevelApplication.setTeamId(devTeamId.text);
+		protected function save_clickHandler(event:MouseEvent):void {
+			var file:File = FlexGlobals.topLevelApplication.settingsFile;
+			var fileStream:FileStream = new FileStream();
+			fileStream.open(file, FileMode.WRITE);
+			fileStream.writeUTFBytes("development_team==" + devTeamId.text + "\n");
+			fileStream.close();
+			FlexGlobals.topLevelApplication.setTeamId(devTeamId.text);
 
-            FlexGlobals.topLevelApplication.restartIosDevices();
-            PopUpManager.removePopUp(this);
-        }
+			FlexGlobals.topLevelApplication.restartIosDevices();
+			PopUpManager.removePopUp(this);
+		}
 
-        private var userDir:File;
+		private var userDir:File;
 
-        protected function install_clickHandler(event:MouseEvent):void {
-            userDir = File.userDirectory;
-            var typeFilter:FileFilter = new FileFilter("App file", "*.apk; *.app");
+		protected function install_clickHandler(event:MouseEvent):void {
+			userDir = File.userDirectory;
+			var typeFilter:FileFilter = new FileFilter("App file", "*.apk; *.app");
 
-            userDir.addEventListener(Event.SELECT, fileSelected, false, 0, true);
-            userDir.browse([typeFilter]);
-        }
+			userDir.addEventListener(Event.SELECT, fileSelected, false, 0, true);
+			userDir.browse([typeFilter]);
+		}
 
-        private function fileSelected(ev:Event):void {
-            userDir.removeEventListener(Event.SELECT, fileSelected);
+		private function fileSelected(ev:Event):void {
+			userDir.removeEventListener(Event.SELECT, fileSelected);
 
-            process = new NativeProcess();
-            procInfo = new NativeProcessStartupInfo();
+			process = new NativeProcess();
+			procInfo = new NativeProcessStartupInfo();
 
-            procInfo.executable = new File("/usr/bin/xcrun");
-            procInfo.workingDirectory = File.userDirectory;
+			procInfo.executable = new File("/usr/bin/xcrun");
+			procInfo.workingDirectory = File.userDirectory;
 
-            process.addEventListener(NativeProcessExitEvent.EXIT, onInstallExit, false, 0, true);
-            process.addEventListener(ProgressEvent.STANDARD_ERROR_DATA, onOutputError, false, 0, true);
-            process.addEventListener(ProgressEvent.STANDARD_OUTPUT_DATA, onOutput, false, 0, true);
+			process.addEventListener(NativeProcessExitEvent.EXIT, onInstallExit, false, 0, true);
+			process.addEventListener(ProgressEvent.STANDARD_ERROR_DATA, onOutputError, false, 0, true);
+			process.addEventListener(ProgressEvent.STANDARD_OUTPUT_DATA, onOutput, false, 0, true);
 
-            procInfo.arguments = new <String>["simctl", "install", dev.id, userDir.nativePath];
-            process.start(procInfo);
+			procInfo.arguments = new <String>["simctl", "install", dev.id, userDir.nativePath];
+			process.start(procInfo);
 
-            enabled = false;
-        }
+			enabled = false;
+		}
 
-        protected function onOutputError(event:ProgressEvent):void {
-            trace(process.standardError.readUTFBytes(process.standardError.bytesAvailable));
-        }
+		protected function onOutputError(event:ProgressEvent):void {
+			trace(process.standardError.readUTFBytes(process.standardError.bytesAvailable));
+		}
 
-        protected function onOutput(event:ProgressEvent):void {
-            trace(process.standardOutput.readUTFBytes(process.standardOutput.bytesAvailable));
-        }
+		protected function onOutput(event:ProgressEvent):void {
+			trace(process.standardOutput.readUTFBytes(process.standardOutput.bytesAvailable));
+		}
 
-        protected function onInstallExit(event:NativeProcessExitEvent):void {
-            process.removeEventListener(NativeProcessExitEvent.EXIT, onInstallExit);
-            process = null;
-            procInfo = null;
-            userDir = null;
+		protected function onInstallExit(event:NativeProcessExitEvent):void {
+			process.removeEventListener(NativeProcessExitEvent.EXIT, onInstallExit);
+			process = null;
+			procInfo = null;
+			userDir = null;
 
-            enabled = true;
-        }
+			enabled = true;
+		}
 
-        private var process:NativeProcess;
-        private var procInfo:NativeProcessStartupInfo;
+		private var process:NativeProcess;
+		private var procInfo:NativeProcessStartupInfo;
 
-        protected function copyId_clickHandler(event:MouseEvent):void {
-            var file:FileReference = new FileReference();
-            var txtInput:String = "Device ID\tDevice Name\tDevice Platform\n";
-            for each(var d:RunningDevice in devices) {
-                if (d.manufacturer == "Apple") {
-                    txtInput += d.id + "\t" + d.modelName + "\tios\n";
-                }
-            }
-            file.save(txtInput, "devices.txt")
-        }
+		protected function copyId_clickHandler(event:MouseEvent):void {
+			var file:FileReference = new FileReference();
+			var txtInput:String = "Device ID\tDevice Name\tDevice Platform\n";
+			for each(var d:RunningDevice in devices) {
+				if (d.manufacturer == "Apple") {
+					txtInput += d.id + "\t" + d.modelName + "\tios\n";
+				}
+			}
+			file.save(txtInput, "devices.txt")
+		}
 
-        protected function linkbutton_clickHandler(event:MouseEvent):void {
-            navigateToURL(new URLRequest("https://developer.apple.com/account/"));
-        }
+		protected function linkbutton_clickHandler(event:MouseEvent):void {
+			navigateToURL(new URLRequest("https://developer.apple.com/account/"));
+		}
 
-        protected function linkbuttonAts_clickHandler(event:MouseEvent):void {
-            navigateToURL(new URLRequest("https://github.com/pierrehub2b/AtsMobileStation#ios-devices"));
-        }
-        ]]>
+		protected function linkbuttonAts_clickHandler(event:MouseEvent):void {
+			navigateToURL(new URLRequest("https://github.com/pierrehub2b/AtsMobileStation#ios-devices"));
+		}
+
+		protected function setAutomaticPort(event:MouseEvent):void {
+			var availablePort:int = PortSwitcher.getAvailableLocalPort()
+			HttpServer.getInstance().listen(availablePort, handleHttpServerError)
+		}
+
+		protected function setSpecificPort(event:MouseEvent):void {
+			webServerErrorLabel.visible = false
+
+			var specificPort:int = int(webServerPort.text)
+			HttpServer.getInstance().listen(specificPort, handleHttpServerError)
+		}
+
+		protected function handleHttpServerError(error:Error):void {
+			webServerErrorLabel.visible = true
+			webServerErrorLabel.text = error.message
+		}
+		]]>
 	</fx:Script>
 	
-	<s:VGroup left="6" right="6" top="10" bottom="36" gap="2" horizontalAlign="center"
+	<s:VGroup left="6" right="6" top="10" bottom="36" gap="2" horizontalAlign="left"
 			  verticalAlign="middle">
+		<s:Label fontWeight="bold" paddingLeft="5" text="Web server"/>
+		<s:HGroup width="100%" gap="3" paddingLeft="5" verticalAlign="middle" verticalCenter="0">
+			<s:TextInput id="webServerPort" width="60" height="100%" maxChars="5" text="{HttpServer.getInstance().port}"/>
+			<s:Button width="100" label="Refresh" fontStyle="normal" fontSize="11" click="setSpecificPort(event)"/>
+		</s:HGroup>
+		<s:Label id="webServerErrorLabel" paddingLeft="5" width="100%" fontStyle="normal" fontSize="11" color="red" visible="false"/>
+		<s:Spacer height="6"/>
 		<s:HGroup width="100%" gap="3" paddingLeft="5" verticalAlign="middle" verticalCenter="0">
 				<s:Label fontWeight="bold" paddingRight="5" text="Development team ID :"/>
 				<s:TextInput id="devTeamId" width="100%" height="100%" maxChars="10"/>
