--- a/src/AtsMobileStation.mxml
+++ b/src/AtsMobileStation.mxml
@@ -8,184 +8,189 @@
 		<![CDATA[
 			import com.greensock.TweenMax;
 			
+			import device.Device;
+			import device.RunningDevice;
+			import device.running.IosDevice;
+			
 			import flash.filters.BitmapFilterQuality;
 			
 			import mx.core.FlexGlobals;
 			import mx.events.FlexEvent;
 			import mx.managers.PopUpManager;
 			
-			import spark.filters.DropShadowFilter;
-			
-			import device.Device;
-			import device.RunningDevice;
-			import device.running.IosDevice;
-			
 			import renderer.PhysicialDeviceSettingsWindow;
 			import renderer.RunningDeviceRenderer;
 			
 			import servers.http.HttpServer;
 			
-			import tools.PeerGroupConnection;
-
-		public static const dropShadowFilter:DropShadowFilter = new DropShadowFilter(2.0, 45, 0x000000, 0.1, 10.0, 10.0, 0.9, BitmapFilterQuality.HIGH, false, false, false);
-
-		public static const isMacOs:Boolean = Capabilities.os.indexOf("Mac") > -1;
+			import spark.filters.DropShadowFilter;
 			
-		private var peerGroup:PeerGroupConnection;
-
-		[Bindable]
-		private var port:String = "8080";
-
-		[Bindable]
-		public var devices:RunningDevicesManager;
-
-		[Bindable]
-		public var simulators:AvailableSimulatorsManager;
-
-		private var httpServer:HttpServer = HttpServer.getInstance()
-
-		public var teamId:String;
-
-		public function get logsFolder():File {
-			return File.userDirectory.resolvePath(".actiontestscript/mobilestation/logs");
-		}
-
-		public function get devicesSettingsFile():File {
-			return File.userDirectory.resolvePath(".actiontestscript/mobilestation/settings/devicesSettings.txt");
-		}
-
-		public function get devicePortSettingsFile():File {
-			return File.userDirectory.resolvePath(".actiontestscript/mobilestation/settings/portSettings.txt");
-		}
-
-		public function get settingsFile():File {
-			return File.userDirectory.resolvePath(".actiontestscript/mobilestation/settings/settings.txt");
-		}
-
-		public function getTeamId():String {
-			return teamId;
-		}
-
-		public function setTeamId(value:String):void {
-			teamId = value;
-		}
-
-		protected function creationCompleteHandler(event:FlexEvent):void {
-			try {
-				logsFolder.deleteDirectory(true);
-			} catch (err:IOError) {
+			import tools.PeerGroupConnection;
+			
+			public static const dropShadowFilter:DropShadowFilter = new DropShadowFilter(2.0, 45, 0x000000, 0.1, 10.0, 10.0, 0.9, BitmapFilterQuality.HIGH, false, false, false);
+			
+			public static const isMacOs:Boolean = Capabilities.os.indexOf("Mac") > -1;
+			
+			public var peerGroup:PeerGroupConnection;
+			
+			[Bindable]
+			private var port:String = "8080";
+			
+			[Bindable]
+			public var devices:RunningDevicesManager;
+			
+			[Bindable]
+			public var simulators:AvailableSimulatorsManager;
+			
+			private var httpServer:HttpServer = HttpServer.getInstance()
+			
+			public var teamId:String;
+			
+			public function get logsFolder():File {
+				return File.userDirectory.resolvePath(".actiontestscript/mobilestation/logs");
 			}
-
-			/* *** */
-			// files corrupted
-			var date:Date = new Date(2020, 2, 31, 18, 30, 0, 0);
-			if (devicePortSettingsFile.exists && devicePortSettingsFile.modificationDate < date) {
-				devicePortSettingsFile.deleteFile();
+			
+			public function get devicesSettingsFile():File {
+				return File.userDirectory.resolvePath(".actiontestscript/mobilestation/settings/devicesSettings.txt");
 			}
-
-			if (devicesSettingsFile.exists && devicesSettingsFile.modificationDate < date) {
-				devicesSettingsFile.deleteFile();
+			
+			public function get devicePortSettingsFile():File {
+				return File.userDirectory.resolvePath(".actiontestscript/mobilestation/settings/portSettings.txt");
 			}
-			/* *** */
-
-
-			if (!Capabilities.isDebugger) {
-				cleanDirectory(File.userDirectory.resolvePath("Library/mobileStationTemp"));
+			
+			public function get settingsFile():File {
+				return File.userDirectory.resolvePath(".actiontestscript/mobilestation/settings/settings.txt");
 			}
-
-			simulators = new AvailableSimulatorsManager();
-			devices = RunningDevicesManager.getInstance();
+			
+			public function getTeamId():String {
+				return teamId;
+			}
+			
+			public function setTeamId(value:String):void {
+				teamId = value;
+			}
+			
+			protected function creationCompleteHandler(event:FlexEvent):void {
+				try {
+					logsFolder.deleteDirectory(true);
+				} catch (err:IOError) {
+				}
+				
+				/* *** */
+				// files corrupted
+				var date:Date = new Date(2020, 2, 31, 18, 30, 0, 0);
+				if (devicePortSettingsFile.exists && devicePortSettingsFile.modificationDate < date) {
+					devicePortSettingsFile.deleteFile();
+				}
+				
+				if (devicesSettingsFile.exists && devicesSettingsFile.modificationDate < date) {
+					devicesSettingsFile.deleteFile();
+				}
+				/* *** */
+				
+				
+				if (!Capabilities.isDebugger) {
+					cleanDirectory(File.userDirectory.resolvePath("Library/mobileStationTemp"));
+				}
+				
+				simulators = new AvailableSimulatorsManager();
+				devices = RunningDevicesManager.getInstance();
+				
+				if (isMacOs) {
+					var file:File = FlexGlobals.topLevelApplication.settingsFile;
+					if (file.exists) {
 						
-			if (isMacOs) {
-				var file:File = FlexGlobals.topLevelApplication.settingsFile;
-				if (file.exists) {
-
-					var fileStream:FileStream = new FileStream();
-					fileStream.open(file, FileMode.READ);
-
-					var settingsContent:String = fileStream.readUTFBytes(fileStream.bytesAvailable);
-					var settingsContentArray:Array = settingsContent.split("\n");
-
-					for each(var setting:String in settingsContentArray) {
-						if (setting != "") {
-							var key:String = setting.split("==")[0];
-							if (key == "development_team") {
-								teamId = setting.split("==")[1];
-								break;
+						var fileStream:FileStream = new FileStream();
+						fileStream.open(file, FileMode.READ);
+						
+						var settingsContent:String = fileStream.readUTFBytes(fileStream.bytesAvailable);
+						var settingsContentArray:Array = settingsContent.split("\n");
+						
+						for each(var setting:String in settingsContentArray) {
+							if (setting != "") {
+								var key:String = setting.split("==")[0];
+								if (key == "development_team") {
+									teamId = setting.split("==")[1];
+									break;
+								}
 							}
 						}
-					}
-					fileStream.close();
-				}
-			}
-
-			httpServer.listen(8080, handleHttpServerError);
-			peerGroup = new PeerGroupConnection(devices, simulators);
-		}
-
-		private function handleHttpServerError(e:Error):void {
-			trace("HTTP Server Error : " + e)
-		}
-
-		public function restartDevice(dev:Device):void {
-			devices.restartDev(dev);
-		}
-
-		public function restartIosDevices():void {
-			for each(var dv:RunningDevice in devices.collection) {
-				if (!dv.simulator && dv is IosDevice && dv.status != Device.READY) {
-					devices.restartDev(dv);
-				}
-			}
-		}
-
-		protected function closeHandler(event:Event):void {
-			devices.terminate();
-		}
-
-		protected function cleanDirectory(directory:File):void {
-			if (directory.isDirectory) {
-				var dirArray:Array = [];
-				var files:Array = directory.getDirectoryListing();
-				for (var i:int = 0; i < files.length; i++) {
-					if (files[i].isDirectory && files[i].nativePath.indexOf("driver_") > -1) {
-						dirArray.push(files[i]);
+						fileStream.close();
 					}
 				}
-
-				for each(var d:File in dirArray) {
-					d.deleteDirectory(true);
+				
+				httpServer.listen(8080, handleHttpServerError);
+				peerGroup = new PeerGroupConnection(devices, simulators);
+			}
+			
+			public function saveDescription(value:String):void {
+				peerGroup.saveDescription(value);
+			}
+			
+			private function handleHttpServerError(e:Error):void {
+				trace("HTTP Server Error : " + e)
+			}
+			
+			public function restartDevice(dev:Device):void {
+				devices.restartDev(dev);
+			}
+			
+			public function restartIosDevices():void {
+				for each(var dv:RunningDevice in devices.collection) {
+					if (!dv.simulator && dv is IosDevice && dv.status != Device.READY) {
+						devices.restartDev(dv);
+					}
 				}
 			}
-		}
-
-		protected function clickGroup_clickHandler(event:MouseEvent):void {
-			if (simulatorsGroup.height == 26) {
-				TweenMax.to(simulatorsGroup, 0.3, {height: height - 38})
-			} else {
-				TweenMax.to(simulatorsGroup, 0.3, {height: 26})
+			
+			protected function closeHandler(event:Event):void {
+				devices.terminate();
+				peerGroup.close();
 			}
-		}
-
-		protected function clickConnected_clickHandler(event:MouseEvent):void {
-			if (simulatorsGroup.height != 26) {
-				TweenMax.to(simulatorsGroup, 0.3, {height: 26})
-			}
-		}
-
-		protected function settings_clickHandler(event:MouseEvent):void {
-			// create and configure the TitleWindow
-			var tw:PhysicialDeviceSettingsWindow = new PhysicialDeviceSettingsWindow();
-			for each(var dv:RunningDevice in devices.collection) {
-				if (!dv.simulator && dv is IosDevice) {
-					tw.devices.push(dv);
+			
+			protected function cleanDirectory(directory:File):void {
+				if (directory.isDirectory) {
+					var dirArray:Array = [];
+					var files:Array = directory.getDirectoryListing();
+					for (var i:int = 0; i < files.length; i++) {
+						if (files[i].isDirectory && files[i].nativePath.indexOf("driver_") > -1) {
+							dirArray.push(files[i]);
+						}
+					}
+					
+					for each(var d:File in dirArray) {
+						d.deleteDirectory(true);
+					}
 				}
 			}
+			
+			protected function clickGroup_clickHandler(event:MouseEvent):void {
+				if (simulatorsGroup.height == 26) {
+					TweenMax.to(simulatorsGroup, 0.3, {height: height - 38})
+				} else {
+					TweenMax.to(simulatorsGroup, 0.3, {height: 26})
+				}
+			}
+			
+			protected function clickConnected_clickHandler(event:MouseEvent):void {
+				if (simulatorsGroup.height != 26) {
+					TweenMax.to(simulatorsGroup, 0.3, {height: 26})
+				}
+			}
+			
+			protected function settings_clickHandler(event:MouseEvent):void {
+				// create and configure the TitleWindow
+				var tw:PhysicialDeviceSettingsWindow = new PhysicialDeviceSettingsWindow();
+				for each(var dv:RunningDevice in devices.collection) {
+					if (!dv.simulator && dv is IosDevice) {
+						tw.devices.push(dv);
+					}
+				}
 
-			// open the TitleWindow as a modal popup window
-			PopUpManager.addPopUp(tw, this, true);
-			PopUpManager.centerPopUp(tw);
-		}
+				// open the TitleWindow as a modal popup window
+				PopUpManager.addPopUp(tw, this, true);
+				PopUpManager.centerPopUp(tw);
+			}
 		]]>
 	</fx:Script>
 	
@@ -203,12 +208,12 @@
 				<s:SolidColorStroke color="#ffffff" weight="1"/>
 			</s:stroke>
 		</s:Rect>
-		<s:HGroup width="100%" paddingLeft="7" paddingRight="3" verticalCenter="0" verticalAlign="middle" gap="3">
+		<s:HGroup width="100%" paddingLeft="7" paddingRight="5" verticalCenter="0" verticalAlign="middle" gap="3">
 			<s:Label fontSize="13" text="Connected Devices" fontWeight="bold"/>
 			<s:Spacer width="100%"/>
 			<s:Group id="settingsButton" visible="true" alpha="0.5" buttonMode="true" click="settings_clickHandler(event)"
-					 toolTip="Settings" height="22" width="22">
-				<s:BitmapImage source="assets/icons/16/info.png" smooth="true" smoothingQuality="high"/>
+					 height="20" width="20">
+				<s:BitmapImage source="assets/icons/20/settings.png" smooth="true" smoothingQuality="high"/>
 			</s:Group>
 		</s:HGroup>
 	</s:Group>
@@ -221,16 +226,16 @@
 			<s:Label fontStyle="italic" fontSize="11"
 					 text="(Connect devices with usb cable to this station)"/>
 		</s:VGroup>
-
+		
 		<s:Spacer height="4"/>
 		<s:List width="100%" height="100%"
 				alternatingItemColors="[#efefef, #dedede]" borderVisible="false"
 				contentBackgroundAlpha="0.0" dataProvider="{devices.collection}"
 				itemRenderer="renderer.RunningDeviceRenderer" useVirtualLayout="false"/>
 	</s:VGroup>
-
+	
 	<s:Group id="simulatorsGroup" left="5" right="5" bottom="5" height="26">
-
+		
 		<s:Rect left="1" right="1" height="100%">
 			<s:fill>
 				<s:LinearGradient rotation="90">
@@ -264,5 +269,5 @@
 				contentBackgroundAlpha="0.0" dataProvider="{simulators.collection}"
 				itemRenderer="renderer.SimulatorDeviceRenderer" useVirtualLayout="false"/>
 	</s:Group>
-		
+	
 </s:WindowedApplication>
