--- a/src/renderer/PhysicialDeviceSettingsWindow.mxml
+++ b/src/renderer/PhysicialDeviceSettingsWindow.mxml
@@ -9,18 +9,15 @@
 	<fx:Script>
 		<![CDATA[
 		import flash.net.navigateToURL;
-
-		import helpers.PortSwitcher;
-		import helpers.Settings;
-
+		
 		import mx.core.FlexGlobals;
 		import mx.events.CloseEvent;
 		import mx.events.FlexEvent;
 		import mx.managers.PopUpManager;
-
+		
 		import device.RunningDevice;
-
-		import servers.http.HttpServer;
+		
+		import helpers.Settings;
 
 		[Embed(source="/assets/icons/16/apple_site.png")]
 		private const AppleIcon:Class;
@@ -127,7 +124,7 @@
 			navigateToURL(new URLRequest("https://github.com/pierrehub2b/AtsMobileStation#ios-devices"));
 		}
 
-		protected function setAutomaticPort(event:MouseEvent):void {
+		/*protected function setAutomaticPort(event:MouseEvent):void {
 			var availablePort:int = PortSwitcher.getAvailableLocalPort()
 			HttpServer.getInstance().listen(availablePort, handleHttpServerError)
 		}
@@ -142,15 +139,15 @@
 		protected function handleHttpServerError(error:Error):void {
 			webServerErrorLabel.visible = true
 			webServerErrorLabel.text = error.message
-		}
+		}*/
 
-		protected function searchDirectory(event:MouseEvent) {
+		protected function searchDirectory(event:MouseEvent):void {
 			var directory:File = File.documentsDirectory;
 			directory.addEventListener(Event.SELECT, directorySelected);
 			directory.browseForDirectory("Select directory");
 		}
 
-		protected function directorySelected(event:Event) {
+		protected function directorySelected(event:Event):void {
 			var directory:File = event.target as File
 			Settings.getInstance().androidSDKDirectory = directory
 			androidSDKDirectory.text = directory.nativePath
@@ -168,12 +165,12 @@
 		<s:Label fontWeight="bold" text="Mobile station description"/>
 		<s:TextArea id="desc" width="100%" height="60"/>
 		<s:Spacer height="6"/>
-		<s:Label fontWeight="bold" text="Web server"/>
+<!--		<s:Label fontWeight="bold" text="Web server"/>
 		<s:HGroup width="100%" gap="3" verticalAlign="middle" verticalCenter="0">
 			<s:TextInput id="webServerPort" width="60" height="100%" maxChars="5" text="{HttpServer.getInstance().port}"/>
 			<s:Button width="100" label="Refresh" fontStyle="normal" fontSize="11" click="setSpecificPort(event)"/>
 		</s:HGroup>
-		<s:Label id="webServerErrorLabel" paddingLeft="5" width="100%" fontStyle="normal" fontSize="11" color="red" visible="false"/>
+		<s:Label id="webServerErrorLabel" paddingLeft="5" width="100%" fontStyle="normal" fontSize="11" color="red" visible="false"/>-->
 
 		<mx:HRule height="6" width="100%"/>
 		<s:Spacer height="6"/>
