--- a/src/AtsMobileStation.mxml
+++ b/src/AtsMobileStation.mxml
@@ -9,22 +9,23 @@
 		<![CDATA[
 			import com.greensock.TweenMax;
 			
-			import device.Device;
-			import device.RunningDevice;
-			import device.running.IosDevice;
-			
 			import flash.filters.BitmapFilterQuality;
 			
+			import mx.controls.Text;
 			import mx.core.FlexGlobals;
 			import mx.events.FlexEvent;
 			import mx.managers.PopUpManager;
+			
+			import spark.filters.DropShadowFilter;
+			
+			import device.Device;
+			import device.RunningDevice;
+			import device.running.IosDevice;
 			
 			import renderer.PhysicialDeviceSettingsWindow;
 			import renderer.RunningDeviceRenderer;
 			
 			import servers.http.HttpServer;
-			
-			import spark.filters.DropShadowFilter;
 			
 			import tools.PeerGroupConnection;
 			
@@ -205,7 +206,8 @@
 				simulators.terminate();
 				peerGroup.close();
 				
-				TweenMax.delayedCall(2.00, closeApp);
+				infoStatus.text = "Please wait all processes to finish ..."
+				TweenMax.delayedCall(5.00, closeApp);
 			}
 			
 			private function closeApp():void{
@@ -287,7 +289,7 @@
 				  visible="{devices.collection.length==0}" includeInLayout="{devices.collection.length==0}">
 			<s:Label fontWeight="bold" 
 					 text="No devices found"/>
-			<s:Label fontStyle="italic" fontSize="11"
+			<s:Label id="infoStatus" fontStyle="italic" fontSize="11"
 					 text="(Connect devices with usb cable to this station)"/>
 		</s:VGroup>
 		
